[tool.poetry]
name = "mobile-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemf@gmail.com>"]
readme = "README.md"
packages = [{include = "mobile_stable_diffusion"}]

[tool.poetry.dependencies]
python = "3.10.*"
datasets = "^2.13.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
ftfy = "^6.1.1"
regex = "^2023.6.3"
typer = "^0.9.0"
tensorboard = "^2.13.0"
diffusers = "^0.17.1"
pytorch-fid = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
